snowchains_core/tests/snapshots/atcoder_retrieve_test_cases__abc007_samples_outcome.snap
---
source: snowchains_core/tests/atcoder-retrieve-test-cases.rs
expression: outcome
---
{
  "contest": {
    "id": "abc007",
    "submissions_url": "https://atcoder.jp/contests/abc007/submissions/me"
  },
  "problems": [
    {
      "index": "A",
      "url": "https://atcoder.jp/contests/abc007/tasks/abc007_1",
      "screen_name": "abc007_1",
      "display_name": "植木算",
      "test_suite": {
        "type": "Batch",
        "timelimit": "2s",
        "match": "Lines",
        "cases": [
          {
            "name": "sample1",
            "in": "4\n",
            "out": "3\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample2",
            "in": "100\n",
            "out": "99\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample3",
            "in": "1\n",
            "out": "0\n",
            "timelimit": null,
            "match": null
          }
        ],
        "extend": []
      },
      "text_files": {}
    },
    {
      "index": "B",
      "url": "https://atcoder.jp/contests/abc007/tasks/abc007_2",
      "screen_name": "abc007_2",
      "display_name": "辞書式順序",
      "test_suite": {
        "type": "Batch",
        "timelimit": "2s",
        "match": "Lines",
        "cases": [
          {
            "name": "sample1",
            "in": "xyz\n",
            "out": "xy\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample2",
            "in": "c\n",
            "out": "b\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample3",
            "in": "a\n",
            "out": "-1\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample4",
            "in": "aaaaa\n",
            "out": "aaaa\n",
            "timelimit": null,
            "match": null
          }
        ],
        "extend": []
      },
      "text_files": {}
    },
    {
      "index": "C",
      "url": "https://atcoder.jp/contests/abc007/tasks/abc007_3",
      "screen_name": "abc007_3",
      "display_name": "幅優先探索",
      "test_suite": {
        "type": "Batch",
        "timelimit": "2s",
        "match": "Lines",
        "cases": [
          {
            "name": "sample1",
            "in": "7 8\n2 2\n4 5\n########\n#......#\n#.######\n#..#...#\n#..##..#\n##.....#\n########\n",
            "out": "11\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample2",
            "in": "5 8\n2 2\n2 4\n########\n#.#....#\n#.###..#\n#......#\n########\n",
            "out": "10\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample3",
            "in": "50 50\n2 2\n49 49\n##################################################\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n#................................................#\n##################################################\n",
            "out": "94\n",
            "timelimit": null,
            "match": null
          }
        ],
        "extend": []
      },
      "text_files": {}
    },
    {
      "index": "D",
      "url": "https://atcoder.jp/contests/abc007/tasks/abc007_4",
      "screen_name": "abc007_4",
      "display_name": "禁止された数字",
      "test_suite": {
        "type": "Batch",
        "timelimit": "2s",
        "match": "Lines",
        "cases": [
          {
            "name": "sample1",
            "in": "1 9\n",
            "out": "2\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample2",
            "in": "40 49\n",
            "out": "10\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample3",
            "in": "1 1000\n",
            "out": "488\n",
            "timelimit": null,
            "match": null
          },
          {
            "name": "sample4",
            "in": "1 1000000000000000000\n",
            "out": "981985601490518016\n",
            "timelimit": null,
            "match": null
          }
        ],
        "extend": []
      },
      "text_files": {}
    }
  ]
}
