snowchains_core/tests/snapshots/atcoder_retrieve_test_cases__agc044_samples_messages.snap
---
source: snowchains_core/tests/atcoder-retrieve-test-cases.rs
expression: messages

---
[
    OnRequest(
        GET,
        Url {
            scheme: "https",
            username: "",
            password: None,
            host: Some(
                Domain(
                    "atcoder.jp",
                ),
            ),
            port: None,
            path: "/contests/agc044/tasks",
            query: None,
            fragment: None,
        },
    ),
    OnResponse(
        200,
        Ok,
    ),
    OnRequest(
        GET,
        Url {
            scheme: "https",
            username: "",
            password: None,
            host: Some(
                Domain(
                    "atcoder.jp",
                ),
            ),
            port: None,
            path: "/contests/agc044/tasks_print",
            query: None,
            fragment: None,
        },
    ),
    OnResponse(
        200,
        Ok,
    ),
]
